# SerialSoul

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.ja.md  README.md  README.zh-TW.md  build.ps1  build.rs  flash.ps1  partitions.csv  pre-publish-scan.ps1  provision.ps1  sdkconfig.defaults  setup-secure-config.ps1  user_config.example.txt
.cargo/: config.toml
.githooks/: pre-commit  pre-push
.github/skills/esp32-flash-debug/: SKILL.md
.github/skills/github-deploy-security/: SKILL.md
android/: gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/novaclaw/bleconfig/: BleManager.kt  MainActivity.kt
android/app/src/main/java/com/serialsoul/bleconfig/: BleManager.kt  MainActivity.kt
android/app/src/main/res/values/: themes.xml
docs/: SETUP_GUIDE.md
src/: board_hw.rs  main.rs
